fixing bug on radio button hint overflow in IE AB#62030

--- a/packages/forms/src/elements/radio/radio.module.scss
+++ b/packages/forms/src/elements/radio/radio.module.scss
@@ -37,5 +37,6 @@
 	font-size: $font-size-2;
 	font-weight: $font-weight-2;
 	margin-top: $space-2;
-	margin-left: 55px;
+	padding-left: 55px;
+	max-width: 100%;
 }
